--- a/src/app/features/member/components/reregister-modal/reregister-modal.component.html
+++ b/src/app/features/member/components/reregister-modal/reregister-modal.component.html
@@ -12,7 +12,9 @@
         <div class="form-group">
           <label for="session">Année de la session</label>
           <select id="session" class="form-select" formControlName="session">
-            <option *ngFor="let year of availableSessions" [value]="year">{{ year }} - {{ year + 1 }}</option>
+            <option *ngFor="let session of availableSessions" [value]="session.id">{{ session.session }}
+              - {{ session.session + 1 }}
+            </option>
           </select>
         </div>
 
